2011-03-19  Mark Ellis  <mark@mpellis.org.uk>

	* 0.15.2 release

2011-03-18  Mark Ellis  <mark@mpellis.org.uk>

	* correct some outstanding uses of DATADIR

2011-03-04  Mark Ellis  <mark@mpellis.org.uk>

	* add synce-unlock script for udev mode
	* rename synce-unlock.py script to synce-unlock

2011-02-27  Mark Ellis  <mark@mpellis.org.uk>

	* configure.ac.in - make udev default option
	* correct log name in udev scripts
	* add synce-serial script to start serial devices
	  manually
	* add udev support to bluetooth scripts

2011-02-12  Mark Ellis  <mark@mpellis.org.uk>

	* 0.15.1 release

2011-01-26  Mark Ellis  <mark@mpellis.org.uk>

	* src/synce-device-manager.c - fix typo assignment
	  instead of comparison, thanks to Karl Relton
	* scripts/{85-synce.rules.in,udev-synce-serial.in} - move
	  logic for dealing with 2 endpoint serial devices from
	  python script to udev rules, thanks to Karl Relton

2010-06-30  Mark Ellis  <mark@mpellis.org.uk>

	* rearrange scripts to use common framework

2010-01-02  Mark Ellis  <mark@mpellis.org.uk>

	* change package name
	* move connection scripts into common source dir
	* fix device-path property

2009-12-28  Mark Ellis  <mark@mpellis.org.uk>

	* use source of synce-hal as base for synce-connector, for
	  udev/devkit support
	* add start of udev/devkit support

2009-10-16  Mark Ellis  <mark@mpellis.org.uk>

	* src/synce-unlock.py - small bugfix

2009-08-01  Mark Ellis  <mark@mpellis.org.uk>

	* put client connection socket in $libexecdir/run instead
	  of /tmp

2009-07-16  Mark Ellis  <mark@mpellis.org.uk>

	* 0.14 release

2009-04-03  Mark Ellis <mark@mpellis.org.uk>

	* src/synce-device.c - provide local iface address as hal
	  property pda.pocketpc.iface_address

2009-03-25  Mark Ellis <mark@mpellis.org.uk>

	* hal/10-synce.fdi - only use an rndis_host interface with 
	  class 239, subclass 1, protocol 1, which is a device in
	  sync mode; leave Internet Connection Sharing to networking
	  tools
